--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,8 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "type" : "module",
   "scripts": {
+    "dev": "nodemon -r ts-node/register src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,8 +16,13 @@
     "@types/ws": "^8.5.13",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.2",
+    "tsc": "^2.0.4",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.5",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
